// https://developers.google.com/protocol-buffers/docs/proto3?hl=ko#json
syntax = "proto3";

package helloworld;

service Greeter {
  rpc sayHello (HelloRequest) returns (HelloResponse);
  rpc sayHelloStreamRequest (stream HelloRequest) returns (HelloResponse) {}
  rpc sayHelloStreamResponse (HelloRequest) returns (stream HelloResponse) {}
  rpc sayHelloStream (stream HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
